name:                sokoban-web
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/sokoban-web#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Render
                     , Board
                     , Game
  build-depends:       base >= 4.7 && < 5
                     , blank-canvas
                     , text
                     , mtl
                     , microlens
                     , microlens-th
                     , microlens-ghc
                     , microlens-mtl
                     , containers
  default-language:    Haskell2010

executable sokoban-web-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , blank-canvas
                     , keycode >= 0.1.1
                     , text
                     , mtl
                     , sokoban-web
                     , microlens
                     , containers
  default-language:    Haskell2010

test-suite sokoban-web-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sokoban-web
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sokoban-web
